# auth-rs

./: Cargo.toml
adapters/axum/: Cargo.toml
adapters/axum/src/: lib.rs
adapters/mysql/: Cargo.toml
